objects/SBQQ__QuoteTerm__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteTermHelp</customHelpPage>
    <description>Legal term printed on quote document.</description>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this quote term is available for use.</description>
        <inlineHelpText>Indicates that this quote term is available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Body__c</fullName>
        <description>Body containing text of the term.</description>
        <inlineHelpText>Text content of this term.</inlineHelpText>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConditionsMet__c</fullName>
        <description>Indicates whether all or any condition must be met in order for term to be applicable.</description>
        <inlineHelpText>Indicates whether all or any condition must be met in order for term to be applicable.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ParentTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent term for this term.</description>
        <inlineHelpText>Parent term for this term.</inlineHelpText>
        <label>Parent Term</label>
        <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
        <relationshipLabel>Sub Terms</relationshipLabel>
        <relationshipName>SubTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrintOrder__c</fullName>
        <description>Order in which the terms are printed on quote document.</description>
        <inlineHelpText>Specifies the order in which the terms are printed on quote document.</inlineHelpText>
        <label>Print Order</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote to which this term applies.</description>
        <inlineHelpText>Quote to which this term applies or blank if this is a standard term.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quote Terms</relationshipLabel>
        <relationshipName>QuoteTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__StandardTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies standard term being modified.</description>
        <inlineHelpText>Specifies standard term being modified.</inlineHelpText>
        <label>Standard Term</label>
        <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
        <relationshipLabel>Modified Terms</relationshipLabel>
        <relationshipName>ModifiedTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Status__c</fullName>
        <description>Status of this quote term.</description>
        <inlineHelpText>Status of this quote term.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <formula>IF(AND(ISBLANK(SBQQ__Quote__c),ISBLANK(SBQQ__StandardTerm__c)), $Label.sbqq__lbl_standard,
  IF(AND(NOT(ISBLANK(SBQQ__Quote__c)),ISBLANK(SBQQ__StandardTerm__c)), $Label.sbqq__lbl_custom, $Label.sbqq__lbl_modified))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the term is standard, custom, or modified.</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Quote Term</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__PrintOrder__c</columns>
        <columns>SBQQ__Active__c</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Body__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QT-{0000}</displayFormat>
        <label>Term #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>